--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
 </div>
        </div>
 
-       
+        <!-- RedConnect -->
+<script id="rhlpscrtg" type="text/javascript" charset="utf-8" async="async"
+src="https://web.redhelper.ru/service/main.js?c=vlad3a"></script>
+<div style="display: none"><a class="rc-copyright" 
+                              href="http://redconnect.ru">Сервис звонка с сайта RedConnect</a></div>
+<!--/RedConnect -->
         
 </body>
 </html>
