--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="header">
     <img class="instogram pp" src="/pictures/nw_instta.png" alt="instogram">
     <img class="vk pp" src="/pictures/nw_vk.png" alt="vk">
-    <img class="coll_beak pp"  src="/pictures/nw_coll.png" alt="coll_beak">
+    <a href="rc-reset rc-flash-move"><img class="coll_beak pp"  src="/pictures/nw_coll.png" alt="coll_beak"></a>
     <img class="facebook pp"  src="/pictures/nw_facebook.png" alt="facebook">
     </div>
 <div class="content" >
@@ -44,12 +44,20 @@
     <a href="/modal_window/modal_Beads.html" rel="modal:open"><img class="md_wd18" src="/pictures/Titanium_nod.png" alt=""></a>
        
        <div class="booton">
-    
+    <div class="fb-comments" data-href="https://vladosiss.github.io" data-width="700px" data-numposts="4"></div>
   </div>
 </div>
 
 </div>
        </div>
+        <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v2.9";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
         <!-- RedConnect -->
 <script id="rhlpscrtg" type="text/javascript" charset="utf-8" async="async"
