--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="style.css"media="all"/>
     <link rel="stylesheet" href="style_media.css"media="all"/>
      <meta name="viewport" content="width=device-width">  
-   <title>hello</title>
+     <link href="slick/slick.css" rel="stylesheet">
+     <link href="slick/slick-theme.css" rel="stylesheet">
+   <title>Pereval</title>
     </head>
     <body>
 <div class="backg">
@@ -50,6 +52,7 @@
 
 </div>
        </div>
+       <script src="slick/slick.min.js"></script>
         <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
