--- a/modal_window/modal_Beads.html
+++ b/modal_window/modal_Beads.html
@@ -23,7 +23,7 @@
        </div>
    </div>
 <div class="vidos">
-    <iframe width="160" height="115" src="https://www.youtube.com/embed/ibD9Pms5LwA" frameborder="0" allowfullscreen></iframe>
+    <iframe width="400rem" height="115" src="https://www.youtube.com/embed/ibD9Pms5LwA" frameborder="0" allowfullscreen></iframe>
 </div>
   
      <div class="caption">
